# parkinson_speech_ai

./: .dvcignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.dvc/: config  config.local.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: README.md  dataset.yaml  mlflow.yaml  model.yaml  paths.yaml  svm_italian_mfcc.yaml  training.yaml  wav2vec2_italian_finetune.yaml  xgboost_mdvrkcl_egemaps.yaml
data/: Readme.md
data/processed/italian/: README.md
data/processed/mdvr_kcl/: README.md
data/raw/future_dataset/: README.md
data/raw/italian/: README.md
data/raw/mdvr_kcl/: README.md
docs/: architecture.md  dagshub_setup.md  datasets.md  dvc_setup.md  mlflow_setup.md  pipeline_design.md  repository_workflow.md  research_questions.md
docs/experiments/italian_datatsets/: README.md
docs/experiments/mdvrkcl/: README.md
docs/experiments/transformers/: README.md
notebooks/: README.md
notebooks/Italian_dataset/: README.md
notebooks/MDVRKCL/: README.md
notebooks/Transformers/: README.md
outputs/: README.md
scripts/: README.md  evaluate.py  preprocess.py  train.py
src/: __init__.py
src/datasets/: README.md  __init__.py  base_dataset.py  collator.py  italian_dataset.py  mdvrkcl_dataset.py
src/deployment/: README.md  __init__.py  app.py  onnx_export.py  predictor.py
src/evaluation/: README.md  __init__.py  cross_validation.py  metrics.py  statistical_tests.py
src/explainability/: README.md  __init__.py  attention_viz.py  integrated_gradients.py  shap_explainer.py
src/features/: README.md  __init__.py  mfcc.py  opensmile_features.py  pipeline.py  prosodic.py  spectral.py
src/models/: __init__.py
src/models/traditional/: README.md  __init__.py  classifier_factory.py  trainer.py
src/models/transformers/: README.md  __init__.py  hubert.py  model_factory.py  trainer.py  wav2vec2.py  wavlm.py
src/preprocessing/: README.md  __init__.py  denoiser.py  loader.py  normalizer.py  pipeline.py  resampler.py  segmenter.py  vad.py
src/utils/: README.md  __init__.py  config.py  device.py  logger.py  logging_utils.py  mlflow_utils.py  paths.py  reproducibility.py  seed.py
tests/: README.md  __init__.py  test_evaluation.py  test_features.py  test_preprocessing.py  test_utils.py
