[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "parkinson-speech-ai"
version = "0.1.0"
description = "A modular, research-grade framework for Parkinson's Disease detection from speech recordings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Parkinson Speech AI Team" },
]
keywords = ["parkinson", "speech", "deep learning", "transformers", "biomarkers", "healthcare AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Repository = "https://github.com/<your-org>/parkinson-speech-ai"
Documentation = "https://github.com/<your-org>/parkinson-speech-ai/tree/main/docs"
Issues = "https://github.com/<your-org>/parkinson-speech-ai/issues"

# ---------------------------------------------------------------------------
# Setuptools: package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

# ---------------------------------------------------------------------------
# isort — import sorting
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip_gitignore = true

# ---------------------------------------------------------------------------
# Ruff — fast linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long — handled by black
    "B008",  # do not perform function calls in default arguments
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "notebooks",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

# ---------------------------------------------------------------------------
# mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["notebooks/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "soundfile.*",
    "sklearn.*",
    "xgboost.*",
    "shap.*",
    "mlflow.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
    "gpu: marks tests requiring a GPU",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
